--- a/frontend/less/dark.less
+++ b/frontend/less/dark.less
@@ -6,7 +6,7 @@
   color: white;
 }
 
-#chat.dark > .chat-msg.right {
-  background: @default-color;
-  color: @dark-color;
+#chat.dark > .chat-msg-cont > .chat-msg.right {
+  background: @default-color!important;
+  color: @dark-color!important;
 }
